composer requirement wrong

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "inwx/domrobot": "dev-master"
+        "inwx/php-client": "dev-master"
     },
     "autoload": {
         "psr-4": { "Bingemer\\InwxBundle\\": "" }
