--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
     bingemer_inwx_bundle:
-        class: Bingemer\InwxBundle\BingemerInwxBundle
+        class: Bingemer\InwxBundle\BingemerInwxBundle\Classes\Domrobot
         arguments: ["%inwx_url%", "%locale%", "%kernel.cache_dir%", "%inwx_user%", "%inwx_pass%"]
